--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
     --secondary-color: #fff;
     --text-color: #fff;
     --text-color-2: #fff;
-    --text-color-3: rgb(204, 0, 0);
+    --accent-color: #00d1ff;
+    --text-color-3: var(--accent-color);
     --overlay-color: rgb(12 12 12 / 63%);
 }
 
@@ -14,7 +15,8 @@
     --secondary-color: #000;
     --text-color: #000;
     --text-color-2: #000;
-    --text-color-3: rgb(204, 0, 0);
+    --accent-color: #0077ff;
+    --text-color-3: var(--accent-color);
     --overlay-color: rgb(255 255 255 / 70%);
 }
 
